<resources>
    <string name="app_name">Calculator</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button0">0</string>
    <string name="Button_arti">+</string>
    <string name="Button_eksi">-</string>
    <string name="Button_carpi">x</string>
    <string name="Button_bolu">/</string>
    <string name="Button_esittir">=</string>
    <string name="Button_nokta">.</string>
    <string name="Button_sil">‹</string>

</resources>