<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_back"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTutulan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="25dp"/>



        <EditText
            android:id="@+id/textbox1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="end|bottom"
            android:textAlignment="textEnd"
            android:textColor="#000"
            android:inputType="numberDecimal"
            android:textSize="30dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/BodyLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">
        
        <LinearLayout
            android:id="@+id/bodyTopLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bodyTopLeft_RowOne"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button7"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button8"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button9"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/bodyTopLeft_RowTwo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button4"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button5"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button6"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/left_RowThree"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button1"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button2"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button3"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/bodyTopLeft_RowFour"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/Button0"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btn_nokta"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_calculate"
                    android:text="@string/Button_nokta"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btn_sonuc"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_calculate"
                    android:text="@string/Button_esittir"
                    android:textColor="@color/text_color"
                    android:textSize="30dp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bodyTopRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_sil"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_calculate"
                android:text="@string/Button_sil"
                android:textColor="@color/text_color"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btn_arti"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_calculate"
                android:text="@string/Button_arti"
                android:textColor="@color/text_color"
                android:textSize="30dp" />


            <Button
                android:id="@+id/btn_eksi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_calculate"
                android:text="@string/Button_eksi"
                android:textColor="@color/text_color"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btn_carpi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_calculate"
                android:text="@string/Button_carpi"
                android:textColor="@color/text_color"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btn_bolu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_calculate"
                android:text="@string/Button_bolu"
                android:textColor="@color/text_color"
                android:textSize="30dp" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>